--- a/assets/templates/customer/customer-table-booking.html
+++ b/assets/templates/customer/customer-table-booking.html
@@ -57,32 +57,29 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0 pe-4">
-                        <a href="{% url 'user_dashboard' %}" class="nav-item nav-link"> Dashboard</a>
-                        
-                        
-                        <a href="{% url 'user_view_menu' %}" class="nav-item nav-link">View Menu</a>
+                        <a href="{% url 'user_dashboard' %}" class="nav-item nav-link active "> Dashboard</a>
 
-                        <a href="{% url 'user_order_food' %}" class="nav-item nav-link">Order Food</a>
+                        <a href="{% url 'user_book_table' %}" class="nav-item nav-link">Book Table</a>
 
-                        <a href="{% url 'user_book_table' %}" class="nav-item nav-link  active">Book Table</a>
-                       
-                        
+
 
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">My Account</a>
                             <div class="dropdown-menu m-0">
-                                <a href="{% url 'user_view_bookings' %}" class="dropdown-item">Booking Status</a>
+                                <a href="{% url 'user_view_bookings' %}" class="dropdown-item">Booking
+                                    Status</a>
                                 <a href="{% url 'user_profile' %}" class="dropdown-item">My Profile </a>
-                                <a href="{% url 'user_view_orders' %}" class="dropdown-item">My Orders View </a>
-                               
+                                 
+
                             </div>
                         </div>
 
                         <a href="{% url 'user_feedback' %}" class="nav-item nav-link">Feedback</a>
                     </div>
                     <a href="{% url 'index' %}" class="btn btn-primary py-2 px-4">Logout</a>
-                    
+
                 </div>
+            </nav>
             </nav>
 
             <div class="container-fluid py-5 bg-dark hero-header mb-5">
@@ -116,53 +113,70 @@
                 <div class="p-5 wow fadeInUp" data-wow-delay="0.2s">
                     <h5 class="section-title ff-secondary text-start text-primary fw-normal">Reservation</h5>
                     <h1 class="text-white mb-4">Book A Table Online</h1>
-                    <form>
+                    <form method="post">
+                        {% csrf_token %}
                         <div class="row g-3">
                             <div class="col-md-6">
                                 <div class="form-floating">
-                                    <input type="text" class="form-control" id="name" placeholder="Your Name">
+                                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name">
                                     <label for="name">Your Name</label>
                                 </div>
                             </div>
 
                             <div class="col-md-6">
                                 <div class="form-floating">
-                                    <input type="tel" class="form-control" id="number" placeholder="Phone Number">
+                                    <input type="tel" name="mobile" class="form-control" id="number" placeholder="Phone Number">
                                     <label for="number">Phone Number</label>
                                 </div>
                             </div>
 
                             <div class="col-md-6">
                                 <div class="form-floating">
-                                    <input type="email" class="form-control" id="email" placeholder="Your Email">
+                                    <input type="email" name="email" class="form-control" id="email" placeholder="Your Email">
                                     <label for="email">Your Email</label>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-floating date" id="date3" data-target-input="nearest">
-                                    <input type="text" class="form-control datetimepicker-input" id="datetime" placeholder="Date & Time" data-target="#date3" data-toggle="datetimepicker" />
+                                    <input type="text" name="date" class="form-control datetimepicker-input" id="datetime" placeholder="Date & Time" data-target="#date3" data-toggle="datetimepicker" />
                                     <label for="datetime">Date & Time</label>
                                 </div>
                             </div>
 
 
                             <div class="col-md-6">
+
                                 <div class="form-floating">
-                                    <select class="form-select" id="select3">
-                                        <option value="0">Select a Restaurant</option>
-                                        <option value="1">Bawarchi</option>
+                                    <select class="form-select" name="restaurant" id="select3">
+                                        <option>Select a Restaurant</option>
+                                        {% for r in res %}
+                                        <option>{{r.restaurent_name}}</option>
+                                        {% endfor %}
+                                        {% comment %} <option value="1">Bawarchi</option>
                                         <option value="2">Paradise</option>
                                         <option value="3">Shaghouse</option>
                                         <option value="4">Novotal</option>
                                         <option value="5">Kritunga</option>
                                         <option value="6">Swagath Grand</option>
-                                        <option value="7">Minerva Grand</option>
+                                        <option value="7">Minerva Grand</option> {% endcomment %}
   
                                     </select>
                                     <label for="select3"></label>
                                   </div>
                             </div>
-                            
+                            <div class="col-md-6">
+                                <div class="form-floating">
+                                    <select class="form-select" name="table" id="select1">
+                                        <option>Table Category</option>
+                                        <option>Booths</option>
+                                        <option>Two to Four Person Tables</option>
+                                        <option>Bar Height Table</option>
+                                        <option>Family Dinning Table</option>
+                                        <option>Outdoor Table</option>
+                                    </select>
+                                    <label for="select1"></label>
+                                  </div>
+                            </div>
                             
                            
 
@@ -170,12 +184,12 @@
 
                             <div class="col-md-6">
                                 <div class="form-floating">
-                                    <select class="form-select" id="select1">
+                                    <select class="form-select" name="members" id="select1">
                                         <option value="0">No of Members</option>
-                                        <option >1-3</option>
-                                        <option >4-6</option>
-                                        <option >7-10</option>
-                                        <option >11-15</option>
+                                        <option >2-4</option>
+                                        <option >4-8</option>
+                                        <option >8-10</option>
+                                        <option >10+</option>
                                     </select>
                                     <label for="select1"></label>
                                   </div>
@@ -183,7 +197,7 @@
 
                             <div class="col-12">
                                 <div class="form-floating">
-                                    <textarea class="form-control" placeholder="Special Request" id="message" style="height: 100px"></textarea>
+                                    <textarea class="form-control" name="srequest" placeholder="Special Request" id="message" style="height: 100px"></textarea>
                                     <label for="message">Special Request</label>
                                 </div>
                             </div>
