--- a/assets/templates/restaurants/restaurant-dashboard.html
+++ b/assets/templates/restaurants/restaurant-dashboard.html
@@ -58,12 +58,11 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0 pe-4">
                         <a href="{% url 'restro_dashboard' %}" class="nav-item nav-link active"> Dashboard</a>
-                        <a href="{% url 'restro_add_menu' %}" class="nav-item nav-link">Add Menu</a>
+                        <a href="{% url 'restro_add_menu' %}" class="nav-item nav-link">Add Tables</a>
 
-                        <a href="{% url 'restro_view_menu' %}" class="nav-item nav-link">View Menu</a>
+                        <a href="{% url 'restro_view_menu' %}" class="nav-item nav-link">View Tables</a>
 
-                        <a href="{% url 'restro_view_food_orders' %}" class="nav-item nav-link">Orders</a>
-
+                        
                         <a href="{% url 'restro_view_table_bookings' %}" class="nav-item nav-link">Bookings</a>
 
 
