--- a/assets/templates/customer/customer-my-profile.html
+++ b/assets/templates/customer/customer-my-profile.html
@@ -58,12 +58,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0 pe-4">
-                        <a href="{% url 'user_dashboard' %}" class="nav-item nav-link "> Dashboard</a>
-
-
-                        <a href="{% url 'user_view_menu' %}" class="nav-item nav-link">View Menu</a>
-
-                        <a href="{% url 'user_order_food' %}" class="nav-item nav-link">Order Food</a>
+                        <a href="{% url 'user_dashboard' %}" class="nav-item nav-link active "> Dashboard</a>
 
                         <a href="{% url 'user_book_table' %}" class="nav-item nav-link">Book Table</a>
 
@@ -74,10 +69,8 @@
                             <div class="dropdown-menu m-0">
                                 <a href="{% url 'user_view_bookings' %}" class="dropdown-item">Booking
                                     Status</a>
-                                <a href="{% url 'user_profile' %}" class="dropdown-item active">My Profile
-                                </a>
-                                <a href="{% url 'user_view_orders' %}" class="dropdown-item">My Orders View
-                                </a>
+                                <a href="{% url 'user_profile' %}" class="dropdown-item">My Profile </a>
+                                 
 
                             </div>
                         </div>
@@ -87,6 +80,7 @@
                     <a href="{% url 'index' %}" class="btn btn-primary py-2 px-4">Logout</a>
 
                 </div>
+            </nav>
             </nav>
 
             <div class="container-fluid py-5 bg-dark hero-header mb-5">
