--- a/assets/templates/restaurants/restaurant-login.html
+++ b/assets/templates/restaurants/restaurant-login.html
@@ -102,7 +102,8 @@
                     <h3 class="section-title ff-secondary  text-primary fw-normal" class="text-align:start;">Restaurant
                         Login</h3>
                     <h1 class="text-white mb-4"></h1>
-                    <form>
+                    <form method="post">
+                        {% csrf_token %}
                         <div class="row g-3">
 
                             <div class="col-md-12 px-5">
@@ -132,7 +133,7 @@
 
 
                             <div>
-                                <button class="btn btn-primary py-3" type="submit" style="width:100px">Login</button>
+                                <button class="btn btn-primary py-3" type="submit">Login</button>
                                 <a href="{% url 'restro_reg' %}" class="btn btn-primary py-3" type="submit" style="width:100px">Register</a>
                             </div>
 
