--- a/assets/templates/restaurants/restaurant-view-feedback.html
+++ b/assets/templates/restaurants/restaurant-view-feedback.html
@@ -58,21 +58,20 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0 pe-4">
                         <a href="{% url 'restro_dashboard' %}" class="nav-item nav-link "> Dashboard</a>
-                        <a href="{% url 'restro_add_menu' %}" class="nav-item nav-link">Add Menu</a>
+                        <a href="{% url 'restro_add_menu' %}" class="nav-item nav-link">Add Tables</a>
+
+                        <a href="{% url 'restro_view_menu' %}" class="nav-item nav-link">View Tables</a>
+
                         
-                        <a href="menu.html" class="nav-item nav-link">View Menu</a>
-                       
-                       
+                        <a href="{% url 'restro_view_table_bookings' %}" class="nav-item nav-link">Bookings</a>
 
-                        <a href="{% url 'restro_view_food_orders' %}" class="nav-item nav-link"> Orders</a>
 
-                        <a href="{% url 'restro_view_table_bookings' %}" class="nav-item nav-link"> Bookings</a>
 
 
                         <a href="{% url 'restro_view_feedback' %}" class="nav-item nav-link active">Feedback</a>
                     </div>
                     <a href="{% url 'index' %}" class="btn btn-primary py-2 px-4">Logout</a>
-                    
+
                 </div>
             </nav>
 
@@ -93,77 +92,78 @@
 
 
         <center>
-          <div class="container">
-      <div class="col-lg-12 grid-margin stretch-card">
-          <div class="card ">
-            <div class="card-body" style="background-color:black">
-              <h4 class="card-title"></h4>
-              <p class="card-description">
-                <code></code>
-              </p>
-              <div class="table-responsive">
-                <table class="table table-borderless ">
-                  <thead style="background-color:orange; color:black">
-                    <tr class="text-dark text-center" style="font-size:30px">
-                 <th >Customer Feedback</th>
-                      
-                    </tr>
-                  </thead>
-                  <tbody style="background-color:white; ">
-                    <tr>
-                     <td>
-                      <div class="d-flex">
-                        <img  src="/Admin/images/faces/face1.jpg" style=" width: 40px; height: 40px;  margin-right: 10px;  border-radius: 100%;" alt="user">
-                        <div style="text-align: start; margin-right: 20px;">
-                          <p class="text-info mb-1">Isabella Becker</p>
-                          <p class="mb-0">Sales dashboard have been created. You have done a great job #TW111 </p>
-                          <small>9:30 am</small>
-                        </div>
-                      </div>
-                     </td>
-                    </tr>
+            <div class="container">
+                <div class="col-lg-12 grid-margin stretch-card">
+                    <div class="card ">
+                        <div class="card-body" style="background-color:black">
+                        <h4 class="card-title"></h4>
+                        <p class="card-description">
+                            <code></code>
+                        </p>
+                        <div class="table-responsive">
+                            <table class="table table-borderless ">
+                            <thead style="background-color:orange; color:black">
+                                <tr class="text-dark text-center" style="font-size:30px">
+                            <th >Customer Feedback</th>
+                                
+                                </tr>
+                            </thead>
+                            <tbody style="background-color:white; ">
+                                <tr>
+                                <td>
+                                <div class="d-flex">
+                                    <img  src="/Admin/images/faces/face1.jpg" style=" width: 40px; height: 40px;  margin-right: 10px;  border-radius: 100%;" alt="user">
+                                    <div style="text-align: start; margin-right: 20px;">
+                                    <p class="text-info mb-1">Isabella Becker</p>
+                                    <p class="mb-0">Sales dashboard have been created. You have done a great job #TW111 </p>
+                                    <small>9:30 am</small>
+                                    </div>
+                                </div>
+                                </td>
+                                </tr>
 
-                    <tr>
-                     <td>
-                      <div class="d-flex">
-                        <img src="/Admin/images/faces/face10.jpg" style=" width: 40px; height: 40px;  margin-right: 10px;  border-radius: 100%;" alt="user">
-                        <div style="text-align: start; margin-right: 20px;">
-                          <p class="text-info mb-1">Adam Warren</p>
-                          <p class="mb-0">You have done a great job #TW111. Sales dashboard have been created. You have done a great job #TW111 </p>
-                          <small>10:30 am</small>
+                                <tr>
+                                <td>
+                                <div class="d-flex">
+                                    <img src="/Admin/images/faces/face10.jpg" style=" width: 40px; height: 40px;  margin-right: 10px;  border-radius: 100%;" alt="user">
+                                    <div style="text-align: start; margin-right: 20px;">
+                                    <p class="text-info mb-1">Adam Warren</p>
+                                    <p class="mb-0">You have done a great job #TW111. Sales dashboard have been created. You have done a great job #TW111 </p>
+                                    <small>10:30 am</small>
+                                    </div>
+                                </td>
+                                
+                                </tr>
+                                <tr>
+                                
+                                <td>
+                                    <div class="d-flex">
+                                    <img src="/Admin/images/faces/face2.jpg" style=" width: 40px; height: 40px;  margin-right: 10px;  border-radius: 100%;" alt="user">
+                                    <div style="text-align: start; margin-right: 20px;">
+                                    <p class="text-info mb-1">Leonard Thornton</p>
+                                    <p class="mb-0">Sales dashboard have been created. You have done a great job #TW111</p>
+                                    <small>11:30 am</small>
+                                    </div>
+                                    </div>
+                                </td>
+                                </tr>
+                                <tr>
+                                
+                                
+                                </tr>
+                                <tr>
+                                
+                                
+                                </tr>
+                            </tbody>
+                            </table>
                         </div>
-                     </td>
-                     
-                    </tr>
-                    <tr>
-                     
-                      <td>
-                        <div class="d-flex">
-                          <img src="/Admin/images/faces/face2.jpg" style=" width: 40px; height: 40px;  margin-right: 10px;  border-radius: 100%;" alt="user">
-                         <div style="text-align: start; margin-right: 20px;">
-                          <p class="text-info mb-1">Leonard Thornton</p>
-                          <p class="mb-0">Sales dashboard have been created. You have done a great job #TW111</p>
-                          <small>11:30 am</small>
-                         </div>
-                          </div>
-                      </td>
-                    </tr>
-                    <tr>
-                     
-                      
-                    </tr>
-                    <tr>
-                     
-                      
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
+                        </div>
+                    </div>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-      </div>
-      </center>
+        </center>
         
        
 
